rbutil: fix URL to build-info for dailies and releases. And hide targets which are not in the stable or unstable category.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22705 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -2,7 +2,7 @@
 release_url=http://download.rockbox.org/release/%RELVERSION%/rockbox-%MODEL%-%RELVERSION%.zip
 daily_url=http://download.rockbox.org/daily/%MODEL%/rockbox-%MODEL%.zip
 bleeding_url=http://build.rockbox.org/data/rockbox-%MODEL%.zip
-server_conf_url=http://www.rockbox.org/daily/build-info
+server_conf_url=http://download.rockbox.org/daily/build-info
 bootloader_info_url=http://download.rockbox.org/bootloader/bootloaders-info
 bleeding_info=http://build.rockbox.org/cvsmod/build-info
 font_url=http://www.rockbox.org/daily/fonts/rockbox-fonts.zip
@@ -422,6 +422,7 @@ usbid=
 usberror=
 configure_modelname=m200v4
 encoder=rbspeex
+status=disabled
 
 [sansaclip]
 name="Sansa Clip"
@@ -435,6 +436,7 @@ usbid=0x07817433
 usberror=0x07817432
 configure_modelname=clip
 encoder=rbspeex
+status=disabled
 
 [mrobe100]
 name="m:robe100"
@@ -459,6 +461,7 @@ brand=Onda
 usbid=0x07c4a4a5
 configure_modelname=ondavx747
 encoder=rbspeex
+status=disabled
 
 [ondavx747p]
 name="VX747+"
@@ -471,6 +474,7 @@ brand=Onda
 usbid=0x07c4a4a5
 configure_modelname=ondavx747p
 encoder=rbspeex
+status=disabled
 
 [ondavx777]
 name="VX777"
@@ -483,6 +487,7 @@ brand=Onda
 usbid=0x07c4a4a5
 configure_modelname=ondavx777
 encoder=rbspeex
+status=disabled
 
 [smsgyh820]
 name="YH-820"
@@ -495,6 +500,7 @@ brand=Samsung
 usbid=0x04e85023
 configure_modelname=yh820
 encoder=rbspeex
+status=disabled
 
 [smsgyh920]
 name="YH-920"
@@ -507,6 +513,7 @@ brand=Samsung
 usbid=0x04e85022, 0x04e8501d
 configure_modelname=yh920
 encoder=rbspeex
+status=disabled
 
 [smsgyh925]
 name="YH-925"
@@ -519,6 +526,7 @@ brand=Samsung
 usbid=0x04e85024
 configure_modelname=yh925
 encoder=rbspeex
+status=disabled
 
 [05ac1260]
 name="Apple Ipod Nano (Second Generation)"
