rbutil: fix URL to the font pack.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22706 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -5,7 +5,7 @@ bleeding_url=http://build.rockbox.org/data/rockbox-%MODEL%.zip
 server_conf_url=http://download.rockbox.org/daily/build-info
 bootloader_info_url=http://download.rockbox.org/bootloader/bootloaders-info
 bleeding_info=http://build.rockbox.org/cvsmod/build-info
-font_url=http://www.rockbox.org/daily/fonts/rockbox-fonts.zip
+font_url=http://download.rockbox.org/daily/fonts/rockbox-fonts.zip
 prog_name=rockbox
 bootloader_url=http://download.rockbox.org/bootloader
 themes_url=http://themes.rockbox.org/
