rbutil: change some more URLs to match new locations.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22713 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -9,9 +9,9 @@ font_url=http://download.rockbox.org/daily/fonts/rockbox-fonts.zip
 prog_name=rockbox
 bootloader_url=http://download.rockbox.org/bootloader
 themes_url=http://themes.rockbox.org/
-manual_url=http://download.rockbox.org/manual
+manual_url=http://download.rockbox.org/daily/manual
 doom_url=http://download.rockbox.org/useful/rockdoom.zip
-voice_url=http://www.rockbox.org/voices/
+voice_url=http://download.rockbox.org/daily/voices/
 genlang_url=http://www.rockbox.org/genlang/
 
 [platforms]
