rbutil: check for new Versions at startup.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22734 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -13,6 +13,7 @@ manual_url=http://download.rockbox.org/daily/manual
 doom_url=http://download.rockbox.org/useful/rockdoom.zip
 voice_url=http://download.rockbox.org/daily/voices/
 genlang_url=http://www.rockbox.org/genlang/
+rbutil_url=http://download.rockbox.org/rbutil/
 
 [platforms]
 platform01=player
