rbutil: mark e200v2 and fuze as unstable.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22743 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -386,7 +386,7 @@ configure_modelname=c200
 encoder=rbspeex
 
 [sansae200v2]
-name="Sansa e200v2 series"
+name="Sansa e200v2 series (Unstable)"
 buildserver_modelname=sansae200v2
 bootloadermethod=ams
 bootloadername=/sandisk-sansa/e200v2/bootloader-e200v2.sansa
@@ -399,7 +399,7 @@ configure_modelname=e200v2
 encoder=rbspeex
 
 [sansafuze]
-name="Sansa Fuze"
+name="Sansa Fuze (Unstable)"
 buildserver_modelname=sansafuze
 bootloadermethod=ams
 bootloadername=/sandisk-sansa/fuze/bootloader-fuze.sansa
