Samsung YH920 & YH925 are in the unstable category
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@22804 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -504,7 +504,7 @@ encoder=rbspeex
 status=disabled
 
 [smsgyh920]
-name="YH-920"
+name="YH-920 (Unstable)"
 buildserver_modelname=yh920
 bootloadermethod=mi4
 bootloadername=/samsung/PP5020.mi4
@@ -514,10 +514,9 @@ brand=Samsung
 usbid=0x04e85022, 0x04e8501d
 configure_modelname=yh920
 encoder=rbspeex
-status=disabled
 
 [smsgyh925]
-name="YH-925"
+name="YH-925 (Unstable)"
 buildserver_modelname=yh925
 bootloadermethod=mi4
 bootloadername=/samsung/FW_YH925.mi4
@@ -527,7 +526,6 @@ brand=Samsung
 usbid=0x04e85024
 configure_modelname=yh925
 encoder=rbspeex
-status=disabled
 
 [05ac1260]
 name="Apple Ipod Nano (Second Generation)"
