--- a/tools/database/Makefile
+++ b/tools/database/Makefile
@@ -2,7 +2,7 @@ ifndef V
 SILENT = @
 endif
 INCLUDE = -I../../firmware/export \
-	-I../../apps -I../../uisimulator/sdl -I/usr/include/SDL
+	-I../../apps -I../../apps/gui -I../../uisimulator/sdl -I/usr/include/SDL
 FIRMINC = -I../../firmware/include -fno-builtin
 DEFINES = -D__PCTOOL__ -DHAVE_TAGCACHE -DSIMULATOR -DCONFIG_CODEC=1 \
 	-DROCKBOX_LITTLE_ENDIAN -DROCKBOX_DIR=\".rockbox\" -DROCKBOX_HAS_LOGF \
@@ -13,7 +13,7 @@ SRC = database.o tagcache.o replaygain.o \
 	metadata.o metadata_common.o mp3data.o \
 	a52.o mp3.o adx.o mp4.o aiff.o mpc.o ape.o ogg.o \
 	asap.o sid.o asf.o spc.o flac.o vorbis.o wave.o \
-	mod.o wavpack.o monkeys.o rm.o \
+	mod.o wavpack.o monkeys.o rm.o nsf.c\
 	logf.o unicode.o ctype.o structec.o crc32.o io.o \
 	misc.o strlcpy.o fixedpoint.o
 
