mkamsboot: allow the version string to be overridden from the commandline - e.g. "make APPVERSION=v1.1 mkamsboot".
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23097 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/mkamsboot/Makefile
+++ b/rbutil/mkamsboot/Makefile
@@ -4,7 +4,9 @@ LIBUCL=../../tools/ucl/src/libucl$(RBARCH).a
 CC = gcc
 
 #change for releases
+ifndef APPVERSION
 APPVERSION=`../../tools/version.sh`
+endif
 
 ifndef V
 SILENT = @
