New plugin theme_remove which offers a way to remove specified theme. See the manual for usage.
Flyspray: FS#10187
Author: myself, manual by David Kauffmann

git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23130 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/plugins/viewers.config
+++ b/apps/plugins/viewers.config
@@ -50,6 +50,7 @@ sna,viewers/zxbox,12
 tzx,viewers/zxbox,12
 z80,viewers/zxbox,12
 ppm,viewers/ppmviewer,2
+cfg,viewers/theme_remove,-
 *,viewers/properties,-
 colours,apps/text_editor,11
 ssg,games/superdom,-
