--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -39,6 +39,7 @@ platform25=ipodvideo64mb
 platform26=ipodmini1g
 platform27=ipodmini2g
 platform28=ipodnano
+platform29=ipodnano2g
 platform30=iaudiox5
 platform31=iaudiom5
 platform32=iaudiox5v
@@ -240,6 +241,16 @@ bootloadername=/ipod/bootloader-ipodnano.ipod
 manualname=
 brand=Apple
 configure_modelname=ipodnano
+encoder=rbspeex
+
+[ipodnano2g]
+name="Ipod Nano (2nd gen)"
+buildserver_modelname=ipodnano2g
+bootloadermethod=ipod
+bootloadername=/ipod/bootloader-ipodnano2g.ipodx
+manualname=
+brand=Apple
+configure_modelname=ipodnano2g
 encoder=rbspeex
 
 [ipod4gray]
@@ -526,9 +537,6 @@ brand=Samsung
 usbid=0x04e85024
 configure_modelname=yh925
 encoder=rbspeex
-
-[05ac1260]
-name="Apple Ipod Nano (Second Generation)"
 
 [05ac1240]
 name="Apple Ipod Nano (Second Generation, DFU Mode)"
