rbutil: YH820 Unstable support
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23153 a1c6a512-1295-4272-9138-f99709370657

--- a/rbutil/rbutilqt/rbutil.ini
+++ b/rbutil/rbutilqt/rbutil.ini
@@ -502,7 +502,7 @@ encoder=rbspeex
 status=disabled
 
 [smsgyh820]
-name="YH-820"
+name="YH-820 (Unstable)"
 buildserver_modelname=yh820
 bootloadermethod=mi4
 bootloadername=/samsung/yh820/FW_YH820.mi4
@@ -512,7 +512,6 @@ brand=Samsung
 usbid=0x04e85023
 configure_modelname=yh820
 encoder=rbspeex
-status=disabled
 
 [smsgyh920]
 name="YH-920 (Unstable)"
