Fix building Rockbox Utility when using newer versions of libspeex.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23164 a1c6a512-1295-4272-9138-f99709370657

--- a/tools/rbspeex/Makefile
+++ b/tools/rbspeex/Makefile
@@ -33,7 +33,10 @@ endif
 
 # don't try to use the systems libspeex when building a static binary.
 ifndef STATIC
-SYS_SPEEX = $(shell pkg-config --libs speex)
+SYS_SPEEX = $(shell pkg-config --silence-errors --libs speex)
+ifneq ($(SYS_SPEEX),)
+SYS_SPEEX += $(shell pkg-config --silence-errors --libs speexdsp)
+endif
 endif
 
 # fall back to our own librbspeex if no suitable found.
